--- a/compose.production_test.yaml
+++ b/compose.production_test.yaml
@@ -3,8 +3,8 @@ services:
     image: postgres
     container_name: sample_app_postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_INITDB_ARGS: --encoding=UTF-8 --locale=C
       TZ: Asia/Tokyo
     ports:
@@ -15,7 +15,7 @@ services:
   sample_app_web_app:
     build:
       context: .
-      target: web_production
+      target: production
       args:
         - APP_ENV=production
     image: sample_app_web_app:prd
@@ -24,27 +24,26 @@ services:
       - sample_app_tmp:/sample_app/tmp
       - sample_app_public:/sample_app/public
     env_file:
-      - .env # test
+      - .env
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
+      AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
+      AWS_REGION: ${AWS_REGION}
     ports:
       - "3000:3000"
     tty: true
     stdin_open: true
+    command: >
+      bash -c "rm -f /sample_app/tmp/pids/server.pid && \
+      bundle install --jobs $(nproc) && \
+      (bundle exec rails db:create || true) && \
+      bundle exec rails db:migrate && \
+      bundle exec puma -C config/puma.rb && \
+      echo 'Running in production mode'"
     depends_on:
       - sample_app_db
-  sample_app_batch:
-    build:
-      context: .
-      target: batch_production
-      args:
-        - APP_ENV=production
-    image: sample_app_batch:prd
-    container_name: sample_app_batch.prd
-    env_file:
-      - .env # test
-    tty: true
-    stdin_open: true
-    depends_on:
-      - sample_app_web_app
   sample_app_web_server:
     build:
       context: ./docker/nginx
