非同期処理追加

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ POSTGRES_HOST=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
-SECRET_KEY_BASE=
+SECRET_KEY_BASE=（bundle exec rails secretで発行してください）
+SQS_QUEUE_DEFAULT=http://localstack:4566/000000000000/default
