--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,23 @@
+x-sample_app_base: &sample_app_base
+  build:
+    context: .
+    target: development
+    args:
+      - APP_ENV=development
+  image: sample_app_web_app:dev
+  volumes:
+    - .:/sample_app
+  env_file:
+    - .env
+  environment:
+    AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+    AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
+    AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
+    AWS_REGION: ${AWS_REGION}
+  tty: true
+  stdin_open: true
+
 services:
   sample_app_db:
     image: postgres
@@ -12,28 +32,14 @@ services:
     volumes:
       - sample_app_postgres:/var/lib/postgresql/data
       - ./docker/db/initdb:/docker-entrypoint-initdb.d
+
   sample_app_web_app:
-    build:
-      context: .
-      target: development
-      args:
-        - APP_ENV=development
-    image: sample_app_web_app:dev
+    <<: *sample_app_base
     container_name: sample_app_web_app.dev
     volumes:
       - .:/sample_app:cached
-    env_file:
-      - .env
-    environment:
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
-      AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
-      AWS_REGION: ${AWS_REGION}
     ports:
       - "3000:3000"
-    tty: true
-    stdin_open: true
     command: >
       bash -c "rm -f /sample_app/tmp/pids/server.pid && \
       bundle install --jobs $(nproc) && \
@@ -41,6 +47,40 @@ services:
       bundle exec rails db:migrate && \
       bundle exec rails s -p 3000 -b '0.0.0.0'"
     depends_on:
-      - sample_app_db
+      sample_app_db:
+        condition: service_started
+      localstack:
+        condition: service_healthy
+
+  sample_app_worker:
+    <<: *sample_app_base
+    container_name: sample_app_worker.dev
+    command: >
+      bash -c "bundle exec aws_sqs_active_job --queue default"
+    depends_on:
+      localstack:
+        condition: service_healthy
+
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
+      - SERVICES=sqs
+    volumes:
+      - "./docker/localstack/init-aws.sh:/etc/localstack/init/ready.d/init-aws.sh"
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    healthcheck:
+      test: ["CMD-SHELL", "awslocal sqs list-queues || exit 1"]
+      interval: 3s
+      timeout: 5s
+      retries: 5
+      start_period: 1s
+
 volumes:
   sample_app_postgres:
