--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -36,16 +36,6 @@ jobs:
             echo "No active web deployments found."
           fi
 
-      - name: Check worker deployments
-        run: |
-          ACTIVE_DEPLOYMENTS=$(aws deploy list-deployments --application-name ${{ secrets.CODE_DEPLOY_APPLICATION_WORKER }} --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP_WORKER }} --include-only-statuses "Created" "Queued" "InProgress" --query 'deployments' --output text)
-          if [ -n "$ACTIVE_DEPLOYMENTS" ]; then
-            echo "Active deployment(s) found: $ACTIVE_DEPLOYMENTS"
-            exit 1
-          else
-            echo "No active worker deployments found."
-          fi
-
   ci:
     uses: ./.github/workflows/ci.yaml
 
@@ -232,6 +222,7 @@ jobs:
       - check-active-deployments
       - build-tag
       - build-and-push-image
+      - deploy-web # 念の為webのデプロイ成功後とします。
 
     runs-on: ubuntu-latest
 
@@ -281,10 +272,7 @@ jobs:
           task-definition: ${{ steps.modify-task-definition-image-worker.outputs.task-definition }}
           service: ${{ secrets.ECS_SERVICE_NAME_WORKER }}
           cluster: ${{ secrets.ECS_CLUSTER_NAME_WORKER }}
-          wait-for-service-stability: false
-          codedeploy-appspec: .github/templates/appspec-worker.json
-          codedeploy-application: ${{ secrets.CODE_DEPLOY_APPLICATION_WORKER }}
-          codedeploy-deployment-group: ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP_WORKER }}
+          wait-for-service-stability: true
 
   notify:
     needs:
@@ -319,8 +307,7 @@ jobs:
               Web
               https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.deploy-web.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}
 
-              Worker
-              https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.deploy-worker.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}
+              問題があった場合は「デプロイを停止してロールバック」を実行し、Workerを前のタスク定義に戻してロールバックしてください。
             EOF
           else
             echo "conclusion=failure"
@@ -331,23 +318,15 @@ jobs:
               web_link="https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.deploy-web.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}"
             fi
 
-            worker_link="なし"
-            if [ -n "${{ needs.deploy-worker.outputs.codedeploy-deployment-id }}" ]; then
-              worker_link="https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.deploy-worker.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}"
-            fi
-
             message2=$(cat <<-EOF
               デプロイに問題が発生しました。詳細を確認してください。
               GitHub Actions
               https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
               CodeDeployで「デプロイを停止してロールバック」を実行してください。
-              CodeDeploy
-              Web
               ${web_link}
 
-              Worker
-              ${worker_link}
+              またWorkerを前のタスク定義に戻してロールバックしてください。
             EOF)
 
             echo "message2=${message2}" >> $GITHUB_OUTPUT
