* ログがバッファリングされる問題対応 * nginxでassetsへのアクセスの処理を明示的に設定する * カスタムJSON Formatterの不具合修正

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -57,6 +57,13 @@ server {
   #    deny  all;
   #}
 
+  location /assets/ {
+    gzip_static on;
+    expires max;
+    add_header Cache-Control public;
+    try_files $uri @upstream;
+  }
+
   location / {
     try_files $uri $uri/index.html @upstream;
   }
