--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -312,19 +312,19 @@ jobs:
             echo "conclusion=failure"
             echo "message1=:collision: デプロイに失敗しました" >> $GITHUB_OUTPUT
 
-            web_link="なし"
+            rollback_web=""
             if [ -n "${{ needs.deploy-web.outputs.codedeploy-deployment-id }}" ]; then
-              web_link="https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.deploy-web.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}"
+              rollback_web="\n"
+              rollback_web+="CodeDeployで「デプロイを停止してロールバック」を実行してください。\n"
+              rollback_web+="https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.deploy-web.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}\n"
             fi
 
             message2="デプロイに問題が発生しました。詳細を確認してください。\n"
             message2+="GitHub Actions\n"
             message2+="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}\n"
+            message2+="${rollback_web}"
             message2+="\n"
-            message2+="CodeDeployで「デプロイを停止してロールバック」を実行してください。\n"
-            message2+="${web_link}\n"
-            message2+="\n"
-            message2+="またWorkerを前のタスク定義に戻してロールバックしてください。"          
+            message2+="必要があればWorkerを前のタスク定義に戻してロールバックしてください。"
             echo "message2=${message2}" >> $GITHUB_OUTPUT
           fi
 
