cache_storeでredis_cache_storeを有効化

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,8 @@ app/assets/builds/*
 bin/release/
 config/master.key
 compose.*
+#docker/elasticache
+docker/localstack
 log/*
 !log/.keep
 node_modules/
