--- a/compose.production_test.yaml
+++ b/compose.production_test.yaml
@@ -49,7 +49,7 @@ services:
     depends_on:
       sample_app_db:
         condition: service_started
-      redis:
+      elasticache:
         condition: service_healthy
       localstack:
         condition: service_healthy
@@ -77,15 +77,46 @@ services:
       localstack:
         condition: service_healthy
 
-  redis:
-    image: redis:latest
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
-      interval: 10s
-      timeout: 5s
-      retries: 3
+  #elasticache:
+  #  image: valkey/valkey:latest
+  #  ports:
+  #    - "6379:6379"
+  #  environment:
+  #    - ELASTICACHE_USER=${ELASTICACHE_USER}
+  #    - ELASTICACHE_PASSWORD=${ELASTICACHE_PASSWORD}
+  #    - ELASTICACHE_HOST=${ELASTICACHE_HOST}
+  #    - VALKEY_TLS_ENABLED=yes
+  #    - VALKEY_TLS_CERT_FILE=/etc/ssl/certs/server.crt
+  #    - VALKEY_TLS_KEY_FILE=/etc/ssl/private/server.key
+  #    - VALKEY_TLS_CA_FILE=/etc/ssl/certs/ca.crt
+  #    - VALKEY_ACLFILE=/etc/valkey/users.acl
+  #  volumes:
+  #    - "./docker/elasticache/certs:/etc/ssl/certs"
+  #    - "./docker/elasticache/private:/etc/ssl/private"
+  #    - "./docker/elasticache/config/users.acl:/etc/valkey/users.acl"
+  #  command: >
+  #    redis-server
+  #      --bind 0.0.0.0
+  #      --tls-port 6379
+  #      --port 0
+  #      --aclfile /etc/valkey/users.acl
+  #      --tls-cert-file /etc/ssl/certs/server.crt
+  #      --tls-key-file /etc/ssl/private/server.key
+  #      --tls-ca-cert-file /etc/ssl/certs/ca.crt
+  #  healthcheck:
+  #    test: [
+  #      "CMD",
+  #      "redis-cli",
+  #      "--tls",
+  #      "--cert", "/etc/ssl/certs/server.crt",
+  #      "--key", "/etc/ssl/private/server.key",
+  #      "--cacert", "/etc/ssl/certs/ca.crt",
+  #      "-u", "rediss://${ELASTICACHE_USER}:${ELASTICACHE_PASSWORD}@localhost:6379",
+  #      "ping"
+  #    ]
+  #    interval: 1s
+  #    timeout: 5s
+  #    retries: 3
 
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
