ローカルマシンでproductionモードをテストしたい場合にelasticacheにアクセスできるように対応

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,7 @@ app/assets/builds/*
 bin/release/
 config/master.key
 compose.*
-#docker/elasticache
+docker/elasticache
 docker/localstack
 log/*
 !log/.keep
